# linux_mini_server

v1/: .env.example  .gitignore  CLIENT_VS_NC.md  CMakeLists.txt  LARGE_DATA_ATTACK_ANALYSIS.md  README.md  ROBUSTNESS.md  ROBUSTNESS_EXAMPLES.md  SERVER_ARCHITECTURE.md  SERVER_LOGIC.md  TESTING_GUIDE.md  TEST_WITHOUT_PROTECTION.md  test_robustness.sh  test_smtp.md
v1/include/: debug.h  env.h  smtp.h  sysinfo.h
v1/src/: client.c  debug.c  env.c  server.c  smtp.c  sys  sysinfo.c
